# admission

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  pyproject.toml  railway.json  requirements.txt  vercel.json
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/agents/: admission-extractor.md
.claude/reference/: results-extractor.md
api/: index.py  requirements.txt
data/: adiga_detail.html  adiga_main.html  adiga_report.json  crawl_report.json  results_report.json  suneung_grade_table.json  university_meta.json
docs/: data_fix_plan_admission_type.md  db_overview.md  deployment.md  schema.md
frontend/: app.js  index.html
migration/: PHASE2_INSTRUCTIONS.md  export_for_supabase.py  export_to_csv.py  extract_content.py  fix_admission_type_susi.sql  fix_null_and_grade_type.sql  migrate_to_postgres.py
mobile/: pubspec.yaml
mobile/lib/: main.dart
scripts/: start.sh
src/: __init__.py  api.py  cli.py  config.py  mcp_server.py  models.py  parse_suneung_min.py  parse_전형방법.py
src/crawler/: __init__.py  download_adiga_results.py  download_results.py  engine.py  filters.py  page_crawler.py  rate_limiter.py  robots_parser.py
src/extractors/: __init__.py  admission_analyzer.py  archive_extractor.py  backfill_suneung_min.py  doc_extractor.py  (+14 more)
verification/: data_confidence_2026-03-27.md  improvement_tasks_1.md  improvement_tasks_2.md  improvement_tasks_3.md  improvement_tasks_4.md  improvement_tasks_5.md  mcp_accuracy_report.md  mcp_qa_report_2.md  mcp_qa_report_3.md  sogang_ocr_review.md  verification_status_2026-03-27.md
(+35 files in other folders)
